# KittyPress

./: README.md  archive.cpp  archive.h  bitstream.cpp  bitstream.h  huffman.cpp  huffman.h  kitty.h  lz77.cpp  lz77.h  main.cpp
Android/app/: build.gradle.kts
Android/app/src/main/cpp/: CMakeLists.txt  archive.cpp  archive.h  huffman.cpp  lz77.cpp  native-lib.cpp
Android/app/src/main/java/com/deepion/kittypress/: KittyPressNative.kt  MainActivity.kt
Android/app/src/main/res/layout/: activity_main.xml
Android/app/src/main/res/menu/: main_menu.xml
Android/app/src/main/res/values/: strings.xml
core/: main.cpp
documents/: New Text Document.txt  document.txt  python document.txt
samples/: alps.kitty  alps.txt  hello.kitty  lala.txt
